--- a/projects/index.html
+++ b/projects/index.html
@@ -52,7 +52,7 @@
       <!-- Nav Bar -->
       <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
         <div class="container">
-          <a class="navbar-brand title font-weight-lighter" href="https://archd3sai.github.io/"><span class="font-weight-bold">Arch</span>   Desai</a>
+          <a class="navbar-brand title font-weight-lighter" href="https://github.com/krish17Nov"><span class="font-weight-bold">Krishna</span>   Sharma</a>
           
           <!-- Social Icons -->
           <!-- <div class="navbar-brand social">
@@ -118,123 +118,69 @@
 
           <article>
             <!-- pages/projects.md -->
-<div class="projects">
-  <h2 id="achievements">Achievements</h2>
-  <ul>
-  <li>Recipient of Outstanding Master of Engineering - Industrial Engineering Student Award.</li>
-  <li>Winner of a TAMU Datathon 2020 among 50+ teams.</li>
-  <li>Recipient of TAMU Scholarship and Fee Waiver for excellent academic performance (4.0 GPA).</li>
-  <li>Published total 8 research papers in the domains of machine learning, renewable energy, and Computational Fluid Dynamics.</li>
-  </ul>
-
-  
+<div class="projects"> 
   <h2 id="projects">Projects</h2>
   
-  <p><strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
+  <p><strong><a href="https://github.com/krish17Nov/Data-Mining---Predictive-Maintenance-of-CNC-Machines">Data Mining - Predictive Maintenance of CNC Machining</a></strong></p>
   <div class="container_row">
-      <img class="project_m" align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;padding-bottom: 1em;">
+      <img class="project_m" align="left" width="250" height="150" src="Images/img1.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
       <div class="text">
-        In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a>
+        In this project I performed Data Mining on Altair AI Studio for three different datasets i,e Tool Forces Prediction model, Tool Wear Detection Time Series model followed by Classification, Machine Usage Condition Data Classification model.
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/archd3sai/Instacart-Market-Basket-Analysis">Instacart Market Basket Analysis</a></strong></p>
+  <p><strong><a href="https://github.com/krish17Nov/IEEE-CIS-Fraud-Detection">IEEE CIS Fraud Detection Database</a></strong></p>
   <div class="container_row">
-      <img class="project_m" align="left" width="250" height="150" src="Images/instacart.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
+      <img class="project_m" align="left" width="250" height="150" src="Images/img2.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
       <div class="text">
-        The objective of this project is to analyze the 3 million grocery orders from more than 200,000 Instacart users and predict which previously purchased item will be in user's next order. Customer segmentation and affinity analysis are also done to study user purchase patterns.</p>
+        The goal of the project was to create and analyze a Transactional Database - IEEE Credit Card fraud detection database. Detection of fraudulent patterns using SQL Analytics. Optimization of Schema Design with partitioning/indexing to handle massive datasets. PL/pgSQL functions for in-database scoring and addressing real-time detection needs.
+</p>
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/archd3sai/News-Articles-Recommendation">Hybrid-filtering News Articles Recommendation Engine</a></strong></p>
+  <p><strong><a href="https://github.com/krish17Nov/End-to-End-Machine-Learning-Project">End to End MLOps Implementation of Web App- Wine Quality Prediction</a></strong></p>
   <div class="container_row">
-      <img class="project_m" align="left" width="250" height="150" src="Images/1_cEaeMuTvINqIgyYQMSJWUA.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
+      <img class="project_m" align="left" width="250" height="150" src="Images/img3.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
       <div class="text">
-        A hybrid-filtering personalized news articles recommendation system which can suggest articles from popular news service providers based on reading history of twitter users who share similar interests (Collaborative filtering) and content similarity of the article and user’s tweets (Content-based filtering).</p>
+        Developed ML pipeline for Wine Quality Prediction dataset. Worked on the CI/CD Pipeline of the Web App. Deployed the app on AWS S3.</p>
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/archd3sai/Predictive-Maintenance-of-Aircraft-Engine">Predictive Maintenance of Aircraft Engine</a></strong></p>
+  <p><strong><a href="https://github.com/krish17Nov/Electric-Vehicle-Adoption-and-Infrastructure-Analysis">EV Adoption Rates and Geo-Spatial Infrastructure Analysis:</a></strong></p>
   <div class="container_row">
-      <img class="project_m" align="left" width="250" height="150" src="Images/airplane.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
+      <img class="project_m" align="left" width="250" height="150" src="Images/img4.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
       <div class="text">
-        In this project I have used models such as RNN, LSTM, 1D-CNN to predict the engine failure 50 cycles ahead of its time, and calculated feature importance from them using sensitivity analysis and shap values. Exponential degradation and similarity-based models are also used to calculate its remaining life.</p>
+         Led a team of 3 to develop an explainable Predicitve ML model for EV sales covering Spatial analysis of State-Level Infrastructure Density Mapping. Feature Engineering and EDA for all the features followed by Statistical Testing. Evaluated all the models based on the metrics. Also Hosted a Visualization Dashboard on PowerBI. </p>
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/archd3sai/Multivariate-Phase-1-Analysis">Multivariate Phase 1 Analysis</a></strong></p>
-  <div class="container_row">
-      <img class="project_m" align="left" width="250" height="150" src="Images/phase1.jpg" style="padding-right: 1em;padding-bottom: 1em;">
 
-      <div class="text">
-        Objective of this project is to identify the in-control data points and eliminate out of control data points to set up distribution parameters for manufacturing process monitoring. I utilized PCA for dimension reduction and Hotelling T2 and m-CUSUM control charts to established mean and variance matrices.</p>
-      </div>
-  </div>
-  
-  <h2 id="micro-projects">Micro Projects</h2>
-  <ul>
-  <li><h4 id="statistics-and-machine-learning">Statistics and Machine Learning</h4>
-  <ul>
-  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/genetic-algorithm.ipynb">Genetic Algorithm</a> : In this file, I have implemented simple genetic algorithm that finds out the list of numbers which equal to any specified number when summed together.</li>
-  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/Bayesian%20Statistics.ipynb">Bayesian Statistics</a> : In this file, I explored how bayesian statistics works and how prior assumption reflects posterior probabilities using Gun control example.</li>
-  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/GMM-EM.ipynb">Gaussian Mixture Model and Expectation Maximization</a>: In this file, I implemented Expectation Maximization algorithm to find out true distribution of one dimensional GMM of 2 gaussians.</li>
-  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/Linear%20Regression.ipynb">Linear Regression</a>: In this file, I aim to solve linear regression using analytical method and also by implementing gradient descent, stochastic gradient descent and minibatch gradient descent algorithms.</li>
-  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/NN%20Implementation.ipynb">Neural Network Implementation</a>: In this file, I implemented simple neural network using forward propogation, backword propogation and optimization functions to predict the customer churn.</li>
-  </ul></li>
-  <br>
-  <li><h4 id="challenges">Challenges</h4>
-  <ul>
-  <li><a href="https://github.com/archd3sai/SQL">SQL Challenges</a>: This repository contains codes of online SQL challenges (From Hackerrank, Leetcode, Testdome, etc.) solved by me.</li>
-  <li><a href="https://github.com/archd3sai/DS-Challenges">Data Science Challenges</a>: This repository contains codes of online Data Science challenges (From Hackerrank, TestDome, etc.) solved by me.</li>
-  </ul></li>
-  <br>
-  <li><h4 id="ranking-algorithms">Ranking Algorithms</h4>
-  <ul>
-  <li><a href="https://github.com/archd3sai/Ranking-of-NFL-Teams-using-Markov-method/blob/master/Ranking%20of%20NFL%20teams%20Report.pdf">Ranking of NFL teams using Markov-chain methods</a> : In this project I implemented and compared three stationary distribution of Markov-chain based approaches to rank 32 NFL (National Football League) teams from "Best" to "Worst" using the scores of 2007 NFL regular season.</li>
-  <li><a href="https://github.com/archd3sai/Tennis-Players-Ranking/blob/master/TennisRanking.ipynb">Ranking of Tennis players</a> : Objective of this project is to rank all Tennis Players based on the matches they played in the year of 2018. This project comprises 4 approaches to rank Tennis players and I have tried to make these approaches more robust sequentially.</li>
-  </ul></li>
-  </ul>
 
   <h2 id="core-competencies">Core Competencies</h2>
   <ul>
   <li><strong>Languages</strong>: Python, R, SQL, C++ </li>
-  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, NLP, Statistics, Explainable AI, Data Structures & Algorithms</li>
-  <li><strong>Tools</strong>: Amazon Web Services (S3, Lambda, API Gateway, ECR, ECS, EC2, Cloudwatch, SNS, SQS), Docker, Airflow, Elasticsearch, PostgreSQL, Serverless, Travis CI, Git, Terraform, Flask, MS Excel, Tableau, LangChain</li>
+  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, NLP, Statistics, Physics based AI, Explainable AI, Data Structures & Algorithms</li>
+  <li><strong>Tools</strong>: Docker, PostgreSQL, Git, Flask, MS Excel, Tableau</li>
   </ul>
   
   <h2 id="certificates">Certificates</h2>
   <ul>
-  <li><a href="https://github.com/archd3sai/Portfolio/blob/master/Certificates/CertificateOfCompletion_Tableau%20Essential%20Training%202020.1.pdf">Tableau Essential Training By Linkedin</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Arch%20Desai%20-%20Machine%20Learning%20Explainability.png">Machine Learning Explainability By Kaggle</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/CertificateOfCompletion_Apache%20Pyspark%20By%20Example%20(2).pdf">Apache PySpark Training By Linkedin</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/CertificateOfCompletion_Sql%20Essential%20Training%202018%20(1).pdf">SQL Essential Training By Linkedin</a></li>
-  <li><a href="https://www.hackerrank.com/certificates/c0cda4c2f1b5">SQL Test By HackerRank</a></li>
-  <li><a href="https://www.testdome.com/cert/24cd496af7a24a8489a1fd5de791c392">SQL Test By Testdome</a></li>
-  <li><a href="https://www.testdome.com/cert/124165d7386d4f76be84c240e0547bd3">Data Science Test By Testdome</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Deep%20Learning%20Specialization.pdf">Deep Learning Specialization By deeplearning.ai</a>
-  <ul>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Neural%20Networks%20and%20Deep%20Learning.pdf">Neural Networks and Deep Learning</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Structuring%20Machine%20Learning%20Projects.pdf">Structuring Machine Learning Projects</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Improving%20Deep%20Neural%20Networks.pdf">Improving Deep Neural Networks</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Convolutional%20Neural%20Networks.pdf">Convolution Neural Networks</a></li>
-  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Sequence%20Models.pdf">Sequence Models</a></li>
-  </ul></li>
-  <li><a href="https://courses.cognitiveclass.ai/certificates/bfc1df7e5d084a73b84223495263d0fe">Big Data 101 By Cognitiveclass.ai</a></li>
-  <li><a href="https://analytics.google.com/analytics/academy/certificate/kHYtirzEQV29uzNG8xSFXg">Google Analytics for Begineers By Google</a></li>
+  <li><a href="https://www.coursera.org/learn/python-flask/home/welcome">Web App Development using Python and Flask</a></li>
+  <li><a href="https://www.udemy.com/certificate/UC-d662a28a-9c4c-4835-bace-71f737a48a57/">Data Science Bootcamp 2022</a></li>
   </ul>
 </div>
 
           <!-- Social -->
           <div class="social">
             <div class="contact-icons">
-            <a href="mailto:archdesai.ad@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
-            <a href="https://github.com/archd3sai" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/archd3sai" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/arch_d3sai" title="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:kr.17nov@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://github.com/krish17Nov" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/krishna-sharma-14a370201/" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/wyd_krishh" title="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
             
             </div>
 
