--- a/publications/index.html
+++ b/publications/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Arch  Desai | publications</title>
+    <title>Krishna Sharma | publications</title>
     <meta name="author" content="Arch  Desai" />
     <meta name="description" content="Publications" />
     <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website" />
@@ -120,14 +120,7 @@
             <!-- pages/publications.md -->
 <div class="publications">
   <ul>
-  <li class="mb-4"><b>Desai, A.</b>, Guo, Y., Sheng, S., Sheng, S., Phillips, C., & Williams, L. (2020). Prognosis of Wind Turbine Gearbox Bearing Failures using SCADA and Modeled Data. Annual Conference of the PHM Society, 12(1), 10. <a href="https://phmpapers.org/index.php/phmconf/article/view/1292">[Link]</a></li>
-  <li class="mb-4">Williams, Lindy, <b>Desai, Arch</b>, Guo, Yi, Sheng, Shawn, and Phillips, Caleb. Machine Learning for Gearbox Fault Prediction by Using Both Scada and Modeled Data. United States: N. p., 2021. Web. <a href="https://www.osti.gov/biblio/1769826">[Link]</a></li>
-  <li class="mb-4">Williams, Lindy, Guo, Yi, Sheng, Shawn, and <b>Desai, Arch</b>. Investigation of Multiple Data Streams for Gearbox Bearing Fault Prediction Through Machine-Learning Models. United States: N. p., 2022. Web. <a href="https://www.osti.gov/biblio/1845885">[Link]</a></li>
-  <li class="mb-4">Sheng, Shawn, Keller, Jon, Phillips, Caleb, Guo, Yi, Greco, Aaron, <b>Desai, Arch</b>, and Williams, Lindy. Wind Turbine Drivetrain Reliability Research - Gearbox Bearing Axial Cracking Failure Mode Example. United States: N. p., 2023. Web. <a href="https://www.osti.gov/biblio/1970464">[Link]</a></li>
-  <li class="mb-4"><b>Desai, Arch,</b> Thakkar, Vatsal. Numerical Analysis of Radiative Effects on Natural Convection in Asymmetrically Heated Vertical Convergent Channels. IJAERD volume 4 issue 10, pg. no. 734-749 · Oct 1, 2017</li>
-  <li class="mb-4"><b>Desai, Arch,</b> Thakkar, Vatsal. Radiative Effects On Natural Convective Heat Transfer Enhancement In Asymmetrically Heated Vertical Channel Using Horizontal Rectangular Fin. Proceedings of 3rd national conference on AMPD. 2017.</li>
-  <li class="mb-4">Thakkar, Vatsal, <b>Desai, Arch</b>. Review on Recent Progresses in Heat Transfer Enhancement through the Use of Passive Vortex Generators And Its Applications in Solar Parabolic Trough Systems. IJAERD volume 4 issue 10, pg. no. 696-706 · Oct 1, 2017</li>
-  <li class="mb-4">Thakkar, Vatsal, <b>Desai, Arch</b>. Heat Transfer Enhancement In Corrugated Tubes With Newly Proposed Corrugation Shapes. Proceedings of 3rd national conference on AMPD. 2017. </li>
+  <li class="mb-4">Shailendra Singh Bhadauria, Amanpreet Kaur, Mahesh Prajapat, <b>Krishna Sharma</b>, Subhalakshmi Sahoo, Bhavesh Khichar, Vishal Sharma(2024). Crack tip plastic zone shape for anisotropic material subjected to mode-I loading <a href="https://www.sciencedirect.com/science/article/pii/S2214785323047600">[Link]</a></li>
   </ul>
   
 </div>
@@ -135,10 +128,10 @@
           <!-- Social -->
           <div class="social">
             <div class="contact-icons">
-            <a href="mailto:archdesai.ad@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
-            <a href="https://github.com/archd3sai" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/archd3sai" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/arch_d3sai" title="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:kr.17nov@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://github.com/krish17Nov" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/krishna-sharma-14a370201/" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/wyd_krishh" title="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
             
             </div>
 
