--- a/publications/index.html
+++ b/publications/index.html
@@ -52,7 +52,7 @@
       <!-- Nav Bar -->
       <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
         <div class="container">
-          <a class="navbar-brand title font-weight-lighter" href="https://archd3sai.github.io/"><span class="font-weight-bold">Arch</span>   Desai</a>
+          <a class="navbar-brand title font-weight-lighter" href="https://archd3sai.github.io/"><span class="font-weight-bold">Krishna</span>   Sharma</a>
           
           <!-- Social Icons -->
           <!-- <div class="navbar-brand social">
