--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Arch  Desai | portfolio</title>
+    <title>Krishna  Sharma | portfolio</title>
     <meta name="author" content="Arch  Desai" />
     <meta name="description" content="Data Science Portfolio" />
     <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website" />
