--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Krishna  Sharma | portfolio</title>
-    <meta name="author" content="Arch  Desai" />
+    <meta name="author" content="Krishna  Sharma" />
     <meta name="description" content="Data Science Portfolio" />
     <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website" />
 
