Fix resume PDF file path in index.html

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   </div>
                
                <div class="news"  style="margin-top: 30px;">
-                  <h4><b>Resume</b></h4><iframe src="resume/Master__Resume.pdf" width="100%" height="600px" style="border: 1px solid #ccc;"></iframe>
+                  <h4><b>Resume</b></h4><iframe src="resume/Master_Resume.pdf" width="100%" height="600px" style="border: 1px solid #ccc;"></iframe>
 
                   </div>
 
