Revise project links and descriptions in index.html
Updated project descriptions and links in index.html to reflect new projects and their details.

--- a/projects/index.html
+++ b/projects/index.html
@@ -130,31 +130,36 @@
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/krish17Nov/IEEE-CIS-Fraud-Detection">IEEE CIS Fraud Detection Database</a></strong></p>
+  <p><strong><a href="https://github.com/krish17Nov/IEEE-CIS-Fraud-Detection">Alzheimer’s Detection and Prognosis:</a></strong></p>
   <div class="container_row">
       <img class="project_m" align="left" width="250" height="150" src="Images/img2.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
       <div class="text">
-        The goal of the project was to create and analyze a Transactional Database - IEEE Credit Card fraud detection database. Detection of fraudulent patterns using SQL Analytics. Optimization of Schema Design with partitioning/indexing to handle massive datasets. PL/pgSQL functions for in-database scoring and addressing real-time detection needs.
+        Built a multi-class classification model for early Alzheimer’s stage detection and a
+temporal forecasting model to predict the evolution of clinical metrics based on patient history.
 </p>
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/krish17Nov/End-to-End-Machine-Learning-Project">End to End MLOps Implementation of Web App- Wine Quality Prediction</a></strong></p>
+  <p><strong><a href="https://github.com/krish17Nov/End-to-End-Machine-Learning-Project">Spatio-Temporal Traffic Modeling:</a></strong></p>
   <div class="container_row">
       <img class="project_m" align="left" width="250" height="150" src="Images/img3.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
       <div class="text">
-        Developed ML pipeline for Wine Quality Prediction dataset. Worked on the CI/CD Pipeline of the Web App. Deployed the app on AWS S3.</p>
+        Conducted a comparative study of traffic forecasting using LSTM and a
+spatio-temporal Diffusion Convolutional Neural Network on the PEMS-BAY dataset, incorporating a spatially aware adjacency
+matrix to model traffic flow with diffusion dynamics.</p>
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/krish17Nov/Electric-Vehicle-Adoption-and-Infrastructure-Analysis">EV Adoption Rates and Geo-Spatial Infrastructure Analysis:</a></strong></p>
+  <p><strong><a href="https://github.com/krish17Nov/Electric-Vehicle-Adoption-and-Infrastructure-Analysis">Netflix Recommendation Engine:</a></strong></p>
   <div class="container_row">
       <img class="project_m" align="left" width="250" height="150" src="Images/img4.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
       <div class="text">
-         Led a team of 3 to develop an explainable Predicitve ML model for EV sales covering Spatial analysis of State-Level Infrastructure Density Mapping. Feature Engineering and EDA for all the features followed by Statistical Testing. Evaluated all the models based on the metrics. Also Hosted a Visualization Dashboard on PowerBI. </p>
+        Implemented collaborative filtering techniques, leveraging user-item interaction data to
+recommend movies and shows based on user preferences. Deployed the recommendation engine as a REST API using Flask
+and Docker, ensuring scalability and seamless integration into existing systems, boosting user engagement. </p>
       </div>
   </div>
 
