Update project links and descriptions in index.html
Updated project links and added new project descriptions for better clarity.

--- a/projects/index.html
+++ b/projects/index.html
@@ -130,7 +130,7 @@
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/krish17Nov/IEEE-CIS-Fraud-Detection">Alzheimer’s Detection and Prognosis:</a></strong></p>
+  <p><strong><a href="https://github.com/jamieVazPR/IMSE514_Project">Alzheimer’s Detection and Prognosis:</a></strong></p>
   <div class="container_row">
       <img class="project_m" align="left" width="250" height="150" src="Images/img2.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
@@ -141,7 +141,7 @@ temporal forecasting model to predict the evolution of clinical metrics based on
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/krish17Nov/End-to-End-Machine-Learning-Project">Spatio-Temporal Traffic Modeling:</a></strong></p>
+  <p><strong><a href="https://github.com/elyannmarih/TrafficPrediction/">Spatio-Temporal Traffic Modeling:</a></strong></p>
   <div class="container_row">
       <img class="project_m" align="left" width="250" height="150" src="Images/img3.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
@@ -152,7 +152,7 @@ matrix to model traffic flow with diffusion dynamics.</p>
       </div>
   </div>
 
-  <p><strong><a href="https://github.com/krish17Nov/Electric-Vehicle-Adoption-and-Infrastructure-Analysis">Netflix Recommendation Engine:</a></strong></p>
+  <p><strong>Netflix Recommendation Engine:</strong></p>
   <div class="container_row">
       <img class="project_m" align="left" width="250" height="150" src="Images/img4.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
 
@@ -162,6 +162,25 @@ recommend movies and shows based on user preferences. Deployed the recommendatio
 and Docker, ensuring scalability and seamless integration into existing systems, boosting user engagement. </p>
       </div>
   </div>
+
+    <p><strong><a href="https://github.com/krish17Nov/IEEE-CIS-Fraud-Detection">IEEE CIS Fraud Detection Database:</a></strong></p>
+  <div class="container_row">
+      <img class="project_m" align="left" width="250" height="150" src="Images/img4.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
+
+      <div class="text">
+        The goal of the project was to create and analyze a Transactional Database - IEEE Credit Card fraud detection database. Detection of fraudulent patterns using SQL Analytics. Optimization of Schema Design with partitioning/indexing to handle massive datasets. PL/pgSQL functions for in-database scoring and addressing real-time detection needs. </p>
+      </div>
+  </div>
+
+      <p><strong><a href="https://github.com/krish17Nov/Electric-Vehicle-Adoption-and-Infrastructure-Analysis">EV Adoption Rates and Geo-Spatial Infrastructure Analysis:</a></strong></p>
+  <div class="container_row">
+      <img class="project_m" align="left" width="250" height="150" src="Images/img5.jpeg" style="padding-right: 1em;padding-bottom: 1em;">
+
+      <div class="text">
+        Led a team of 3 to develop an explainable Predicitve ML model for EV sales covering Spatial analysis of State-Level Infrastructure Density Mapping. Feature Engineering and EDA for all the features followed by Statistical Testing. Evaluated all the models based on the metrics. Also Hosted a Visualization Dashboard on PowerBI. </p>
+      </div>
+  </div>
+
 
 
 
